Changelog
=========

1.0.3 - unreleased
------------------

- Removed "line-height: 2em;" from "table.listing a" css rule so the vertical
  alignment of linked text and non linked text is the same.
  [vincentfretin]

- Moved icons in drop down "Add new..." menu to right of text for RTL
  scripts. This fixes http://dev.plone.org/plone/ticket/10954.
  [emanlove]

- Moved language selector to the left for RTL scripts. Also reversed margin
  of the actionMenu for RTL scripts. This fixes
  http://dev.plone.org/plone/ticket/10955.
  [emanlove]

- Fixed state position in the state/transitions menu when it is no clickable.
  [vincentfretin]

- Worked on fixing up styles for IE7
 * removed padding on breadcrumb links, so all breadcrumb text
   displays on one level
 * put in hack to make links with content icons 'display: block' in IE.
   This fixes the Add New dropdown display, but breaks icon display on
   .navTreeCurrentItem, so I added zoom to the links.
   (fyi - the hack was the only way I could find to make this work to
   override the inline-block, did not work in IEFixes.css)
 * adjusted styles on logo so IE displays it in the correct place
 refs #1087
 [cwainwright]


1.0.2 - 2010-07-18
------------------

- Fixed problems with content menus sticking out of the edit bar under various
  font sizes. This closes http://dev.plone.org/plone/ticket/10736.
  [hannosch]

- Fixed anonymous personal bar spacing with multiple entries. This closes
  http://dev.plone.org/plone/ticket/10743.
  [hannosch]

- Fixed bulleted / numbered lists out of text area in right to left. This
  closes http://dev.plone.org/plone/ticket/9658.
  [emanlove, hannosch]

- Added back styles for grid listings. This refs
  http://dev.plone.org/plone/ticket/10331.
  [hannosch]

- Add globe icon to external links when "Mark External Links" is checked.
  [cwainwright]

- Update license to GPL version 2 only.
  [hannosch]

1.0.1 - 2010-07-07
------------------
